console/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: origin-console
  namespace: kube-system
  labels:
    app: origin-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: origin-console
  template:
    metadata:
      labels:
        app: origin-console
    spec:
      serviceAccountName: console
      containers:
        - name: origin-console-container
          image: quay.io/openshift/origin-console:4.6.0
