console/03-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: origin-console-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: console.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: origin-console-svc
          servicePort: 80
